feat: add code availability

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -24,6 +24,8 @@
 \author{Tahmid Azam\\Emmanuel College}
 \date{November 2025}
 
+
+
 \begin{document}
 \begin{acronym}
     \acro{KDE}{kernel density estimate}
@@ -32,6 +34,9 @@
 \end{acronym}
 
 \maketitle
+
+Code is available at \url{https://github.com/tahmidazam/3f3-lab}.
+
 \newpage
 
 \section{Uniform and normal random variables}
